kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "conversations-deployment"
  labels:
    app: "conversations"
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "conversations"
  template:
    metadata:
      labels:
        app: "conversations"
    spec:
      containers:
      - name: "conversations"
        image: "virtuatable/conversations:<VERSION>"
        ports:
          - containerPort: 80
        imagePullPolicy: Always
