kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "conversations-service"
spec:
  selector:
    app: "conversations"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
